# Prompt-Saver

./: CHANGELOG.md  FUTUREUPDATES.md  README.md  build.bat  package-lock.json  package.json
docs/: release-notes.md
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: floating.html  floating.js  fonts.js  i18n.js  index.html  main.js  media.js  snip.html  snip.js
ui/styles/: floating.css  main.css  media.css  snip.css
